[package]
name = "triaka-compiler"
authors = ["sisungo <sisungo@proton.me>"]
version = "0.1.0"
license = "Unlicense"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode-json = { version = "0.1", features = ["json"] }
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "derive"] }
serde_json = "1"
